fix(style): Set overflow: auto on the last frame of max-height animation
In case when the final height is enormously big, we still need overflow: scroll or auto

--- a/app/scss/hidenext.scss
+++ b/app/scss/hidenext.scss
@@ -58,6 +58,16 @@
 	}
 	
 	&__control:checked ~ &__object {
-		max-height: 200vh;
+		max-height: 150vh;
+		animation: 1s ease-in-out forwards last-frame-overflow;
+	}
+}
+
+@keyframes last-frame-overflow {
+	99.9% {
+		overflow-y: hidden;
+	}
+	100% {
+		overflow-y: auto;
 	}
 }
